Commented Animation And Added Details.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
- <!-- Website For College Of Engineering Devoloped By Muthu Palkaniyappan OL, Arunachalam M -->
+ <!-- Website For College Of Engineering Devoloped By Muthu Palkaniyappan OL, Arunachalam M, Balaji A -->
 <head>
     <title>Home Page - College Of Engineering</title>
     <meta charset="UTF-8" />
-    <meta name = "keywords" content = "CEG,  College Of Engineerring Guindy, Guindy Engineering College"/>
-    <meta name = "description" content = "The College of Engineering, Guindy (CEG) is a public engineering college in Chennai, India." />
+    <meta name = "keywords" content = "CEG,  College Of Engineerring Guindy, Guindy Engineering College, Anna University, Anna University Main Campus"/>
+    <meta name = "description" content = "The College of Engineering, Guindy (CEG) is a public engineering college in Chennai, India."/>
     <meta name = "author" content = "College Of Engineering, Guindy" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css"> <!-- Main CSS is here -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Responsive Website-->
+    <link rel="stylesheet" href="CSS\style.css"> <!-- Main CSS is here -->
     <script src="JS\scripts.js"></script> <!-- Main JS is here -->
 </head>
 <body>
     <div class="cegopeninglogodiv" id="OpeningLogoDiv"> <!-- This div holds the image and it gets remove totaly after 2 seconds i.e, after animation is over -->
-        <img src="Images\image.png" alt="College Of Engineering Logo" class="MainPageCegLogo"> <!-- CEG Logo For for animation-->
+        <img src="Images\CegLogoTransparent.png" alt="College Of Engineering Logo" class="MainPageCegLogo"> <!-- CEG Logo For for animation-->
     </div>
-    <div class="MainPageContents" id="MainPageContents"> <!-- This Div Contains All Data Other Than Main Logo (i.e., Whole Website Home Page minus animation) -->
-        <!-- Main Home Page Logo Is Added Here-->
+    <div class="MainPageContents" id="MainPageContents">
+        <!-- This Div Contains All Data Other Than Main Logo (i.e., Whole Website Home Page minus animation) -->
         <h1>Home Page</h1>
         <a href="home.html">Home</a>
         <a href="acadamics.html">Acadamics</a>
