--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name = "description" content = "The College of Engineering, Guindy (CEG) is a public engineering college in Chennai, India."/>
     <meta name = "author" content = "College Of Engineering, Guindy" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Responsive Website-->
-    <link rel="stylesheet" href="CSS\style.css"> <!-- Main CSS is here -->
+    <link rel="stylesheet" href="css\style.css"> <!-- Main CSS is here -->
     <script src="JS\scripts.js"></script> <!-- Main JS is here -->
 </head>
 <body>
