Edited The Names

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- <!-- Website For College Of Engineering Devoloped By Muthu Palkaniyappan OL, Arunachalam M, Balaji A -->
+ <!-- Website For College Of Engineering Devoloped By Muthu Palkaniyappan OL, Arunachalam M, Balaji A, Aswin Ramanathan, Nikhil Sai -->
 <head>
     <title>Home Page - College Of Engineering</title>
     <meta charset="UTF-8" />
