--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="home.html">Home</a>
         <a href="acadamics.html">Acadamics</a>
         <a href="contactus.html">Contact Us</a>
+        <a href='#'>Alumni</a>
     </div>
 </body>
 </html>
