Second Logo For Footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="footer-logo">
                 <img src="./Images/CegLogoTransparent.png">
             </div>
+            
             <div class="footer-address">
                 <label><b>College Of Engineering, Guindy</b></label>
                 <address>
@@ -51,6 +52,9 @@
                     <li><a href="">Campus</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
+            </div>
+            <div class="second-logo">
+                <img src="./Images/CegLogoTransparent.png" alt="AU Logo">
             </div>
         </footer>
 
