--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </ul>
             </div>
             <div class="second-logo">
-                <img src="./Images/CegLogoTransparent.png" alt="AU Logo">
+                <img src="./Images/Anna-University-Logo.jpg" alt="AU Logo">
             </div>
         </footer>
 
