Complete Side Bar Movement

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Header</h1>
             <button class="openbtn" onclick="openNav()">☰ Menu</button> 
         </header>
-        <nav id="mySidepanel" class="sidepanel">
+        <nav id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="home.html">Home</a>
             <a href="acadamics.html">Acadamics</a>
