--- a/Clubs.html
+++ b/Clubs.html
@@ -18,6 +18,7 @@
         margin-top: 0px;
         margin-left:2px;
         padding:2px;
+        padding-top: 0px;
 
     }
     body{
@@ -39,14 +40,25 @@
         margin-right: 10px;
     
     }
+    .headingdiv{
+        height:74px;
+        background-color:rgb(66, 1, 66);
+        width:100%;
+        padding-right: 0px;
+        margin-right: 0px;
+
+
+    }
 
 </style>
 </head>
 
 <body>
+    <div class="headingdiv">
     <h1 class="main-header"><a href="xyz.html"><img class="AULogo"src="Images/Anna-University-Logo.jpg" alt="AU Logo"></a>Clubs of CEG</h1>
-    
+    </div>
 </body>
+<br>
 <main class="main-club-content">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi, nulla, quidem doloribus minima corrupti voluptatum qui, beatae ex dicta ea blanditiis sunt voluptatem dolorum rem debitis totam dolore repudiandae!
 </main>
